# ampla

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  README.pt-BR.md  docker-compose.build.yml  docker-compose.tls.yml  docker-compose.yml  docker-entrypoint.sh
hub/: alembic.ini  pyproject.toml
hub/app/: db_backup.py  main.py
hub/app/api/: deps.py  errors.py
hub/app/core/: config.py  cookies.py  db.py  images.py  mentions.py  notification_query.py  ratelimit.py  security.py
hub/app/models/: __init__.py  agent.py  approval.py  audit.py  autorespond_run.py  delegation.py  group.py  guardrail_preset.py  hub_state.py  kanban.py  message.py  notification.py  schedule.py  user.py
hub/app/repositories/: agent_repo.py  approval_repo.py  audit_repo.py  autorespond_repo.py  delegation_repo.py  group_repo.py  guardrail_preset_repo.py  hub_state_repo.py  invite_repo.py  kanban_repo.py  message_repo.py  notification_repo.py  schedule_repo.py  user_repo.py
hub/app/schemas/: admin.py  agent.py  approval.py  auth.py  autorespond.py  delegation.py  group.py  invite.py  kanban.py  message.py  metrics.py  notification.py  preset.py  schedule.py  ws.py
hub/app/services/: admin_service.py  agent_service.py  approval_service.py  auth_service.py  autorespond_service.py  delegation_service.py  errors.py  group_service.py  kanban_rank.py  kanban_service.py  message_service.py  metrics_service.py  notification_service.py  preset_service.py  schedule_service.py  scheduler.py  scheduler_engine.py
hub/app/ws/: connection_manager.py
hub/migrations/: env.py
hub/migrations/versions/: 13c7b8eb074b_password_resets_table.py  2df7c70dd3c9_baseline_schema.py  3fa2df0ee39d_user_avatars_table.py  4e9c1a7b2d80_agent_auto_paused.py  5f0d2b8c3e91_hub_state_table.py  6a1e3c9d4f02_autorespond_runs_table.py  7b2f4d1e6c93_agent_daily_budget.py  8c3a5e2f7d14_notifications_table.py  b8d0f2a4c6e9_kanban_tables.py  (+13 more)
hub/tests/: conftest.py  helpers.py
(+247 files in other folders)
