[project]
name = "amp-hub"
version = "0.1.0"
description = "AMP Hub — servidor central de mensagens entre agentes Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.20",
    "pydantic>=2.12",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
